2014-10-23 Riccardo Mottola <rm@gnu.org>

	* Preferences.h
	* Preferences.m
	* Resources/Preferences.gorm
	Remove https preference, since it is now forced to YES always.

2014-10-23 Riccardo Mottola <rm@gnu.org>

	* Preferences.h
	* Preferences.m
	* Resources/Preferences.gorm
	New Down Batch Size preference.

	* AppController.m
	Get login URLs from DataBasinKit (new methods) instead of hard-coding strings.

2014-09-09 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Set CSV Reader qualifier and separator

2014-09-02 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	* Preferences.m
	Use correct Defaults methods and not valueForKey

2014-09-02 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Access dictionary in standard way.

2014-09-01 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	* Preferences.h
	* Preferences.m
	* Resources/Preferences.gorm
	Set CSV Writer separator and qualifier preferences

2014-06-26 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	If there are no results, don't attempt to write them.

2014-05-15 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m
	* Resources/DataBasin.gorm
	Update to latest API, allow setting of ordered writing for queries.

2014-05-01 Riccardo Mottola <rm@gnu.org>

	* DBObjectInspector.h
	* DBLogger.h
	Updated to use the DataBasinKit instead of local files and thus
	use DBLoggerProtocol

2014-04-27 Riccardo Mottola <rm@gnu.org>

	* DBCVSWriter.m
        Don't write the header if data is nil.

2014-02-18 Riccardo Mottola <rm@gnu.org>

	* DBSObject.h
	* DBSObject.m
	* DBSoap.m
	Get name, type, label and prefix from the object properties.
	Add and uniform accessors for them.

2014-02-13 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (describeSObject)
	Fix array bounds during retrival of record type names in describe.

2013-12-13 Riccardo Mottola <rm@gnu.org>

	* DBSObject.h
	* DBSObject.m
	Store recordTypes in a NSArray and not a mutable array.

2013-11-18 Riccardo Mottola <rm@gnu.org>

	* DBSoap.h